--- a/UI/src/app/pages/validation-result/validation-result.component.html
+++ b/UI/src/app/pages/validation-result/validation-result.component.html
@@ -17,10 +17,10 @@
         <div class="p-col-12">
           <qa-validation-summary [validationModel]="validationModel"></qa-validation-summary>
         </div>
-        <div *ngIf="validationRun.progress === 100"  class="p-col-12">
+        <div *ngIf="validationRun.progress === 100 && validationRun.output_file"  class="p-col-12">
           <qa-summary-statistics [validationRun]="validationRun" [configs]="configs"></qa-summary-statistics>
         </div>
-        <div *ngIf="validationRun.progress === 100" class="p-col-12">
+        <div *ngIf="validationRun.progress === 100 && validationRun.output_file" class="p-col-12">
           <qa-result-files [validation]="validationRun"></qa-result-files>
         </div>
       </div>
