--- a/UI/src/app/modules/validation-result/components/result-files/result-files.component.html
+++ b/UI/src/app/modules/validation-result/components/result-files/result-files.component.html
@@ -9,18 +9,48 @@
       <ng-template pTemplate="icons">
       </ng-template>
 
-      <div class="p-grid  p-align-center">
-        <div class="p-col">
-            <img style="max-width:100%;max-height:100%;" src="{{boxplotSrc}}" />
-<!--            <img style="max-width:100%;max-height:100%;" src="{{boxplotSrc}}" />-->
+      <div class="card">
+        <div class="p-grid p-align-center">
+          <div class="p-col-5">
+            <img style="width:90%;max-height:90%;" [src]="boxplotSrc"/>
+          </div>
+          <div class="p-col">
+            <div class="p-grid">
+              <div *ngFor="let overview of overviewPlotsSrc" class="p-col-12">
+                <img style="max-width:100%;max-height:100%;" [src]="overview"/>
+              </div>
+<!--              <div class="p-col-4">-->
+<!--                <div class="box">6</div>-->
+<!--              </div>-->
+<!--              <div class="p-col-4">-->
+<!--                <div class="box">6</div>-->
+<!--              </div>-->
+<!--              <div class="p-col-8">-->
+<!--                <div class="box">12</div>-->
+<!--              </div>-->
+            </div>
+          </div>
+
         </div>
       </div>
-      <div class="p-grid  p-align-center">
-        <div *ngFor="let overview of overviewPlotsSrc" class="p-col">
-          <img style="max-width:100%;max-height:100%;" src="{{overview}}" />
-          <!--            <img style="max-width:100%;max-height:100%;" src="{{boxplotSrc}}" />-->
-        </div>
-      </div>
+<!--      <div class="p-grid  p-align-center ">-->
+<!--        <div>-->
+<!--        <div class="p-col">-->
+<!--          <img style="max-width:100%;max-height:100%;" src="{{boxplotSrc}}"/>-->
+<!--          &lt;!&ndash;            <img style="max-width:100%;max-height:100%;" src="{{boxplotSrc}}" />&ndash;&gt;-->
+<!--        </div>-->
+<!--        &lt;!&ndash;      </div>&ndash;&gt;-->
+<!--        &lt;!&ndash;      <div class="p-grid  p-align-center">&ndash;&gt;-->
+<!--        <div class="p-col">-->
+<!--          <div class="p-grid">-->
+<!--            <div  *ngFor="let overview of overviewPlotsSrc" class="p-col">-->
+<!--            <img style="max-width:100%;max-height:100%;" src="{{overview}}"/>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          &lt;!&ndash;            <img style="max-width:100%;max-height:100%;" src="{{boxplotSrc}}" />&ndash;&gt;-->
+<!--        </div>-->
+<!--        </div>-->
+<!--      </div>-->
       <div class="p-grid  p-align-center">
         <div class="p-col">
           <span class="p-float-label p-mb-4 p-mt-3">
