--- a/UI/src/app/modules/validation-result/components/result-files/result-files.component.html
+++ b/UI/src/app/modules/validation-result/components/result-files/result-files.component.html
@@ -9,49 +9,37 @@
       <ng-template pTemplate="icons">
       </ng-template>
 
-      <div class="card">
-        <div class="p-grid p-align-center">
-          <div class="p-col-5">
-            <img style="width:90%;max-height:90%;" [src]="boxplotSrc"/>
-          </div>
-          <div class="p-col">
-            <div class="p-grid">
-              <div *ngFor="let overview of overviewPlotsSrc" class="p-col-12">
-                <img style="max-width:100%;max-height:100%;" [src]="overview"/>
-              </div>
-<!--              <div class="p-col-4">-->
-<!--                <div class="box">6</div>-->
-<!--              </div>-->
-<!--              <div class="p-col-4">-->
-<!--                <div class="box">6</div>-->
-<!--              </div>-->
-<!--              <div class="p-col-8">-->
-<!--                <div class="box">12</div>-->
-<!--              </div>-->
+      <div class="p-grid p-align-center">
+        <div [ngClass]="{'p-col-5': numOfOverviewPlots === 1, 'p-col-6': numOfOverviewPlots > 1}">
+          <img width="95%"
+               height="95%"
+               [src]="boxplotSrc"
+               (click)="showBoxplot()"
+               [ngClass]="{'result-plot':true, 'pcol': numOfOverviewPlots > 4}">
+        </div>
+        <div class="p-col">
+          <div class="p-grid">
+            <div *ngFor="let plot of overviewPlotsSrc; let ind = index"
+                 [ngClass]="{'p-col': numOfOverviewPlots === 1, 'p-col-10': numOfOverviewPlots === 2, 'p-col-6': numOfOverviewPlots > 2}">
+              <img width="95%" height="95%"
+                   [src]="plot"
+                   (click)="showOverviewPlotsGallery(ind)"
+                   [ngClass]="{'result-plot':true, 'pcol': numOfOverviewPlots === 2, 'pcol6': numOfOverviewPlots > 2}">
             </div>
           </div>
-
         </div>
+
       </div>
-<!--      <div class="p-grid  p-align-center ">-->
-<!--        <div>-->
-<!--        <div class="p-col">-->
-<!--          <img style="max-width:100%;max-height:100%;" src="{{boxplotSrc}}"/>-->
-<!--          &lt;!&ndash;            <img style="max-width:100%;max-height:100%;" src="{{boxplotSrc}}" />&ndash;&gt;-->
-<!--        </div>-->
-<!--        &lt;!&ndash;      </div>&ndash;&gt;-->
-<!--        &lt;!&ndash;      <div class="p-grid  p-align-center">&ndash;&gt;-->
-<!--        <div class="p-col">-->
-<!--          <div class="p-grid">-->
-<!--            <div  *ngFor="let overview of overviewPlotsSrc" class="p-col">-->
-<!--            <img style="max-width:100%;max-height:100%;" src="{{overview}}"/>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--          &lt;!&ndash;            <img style="max-width:100%;max-height:100%;" src="{{boxplotSrc}}" />&ndash;&gt;-->
-<!--        </div>-->
-<!--        </div>-->
-<!--      </div>-->
       <div class="p-grid  p-align-center">
+        <div class="p-col-3">
+          <button type="button"
+                  style="width: 9rem;"
+                  class="btn btn-sm btn-primary"
+                  title="Download graphs .zip"
+                  (click)="downloadResultFile(validation.id, 'graphics',validation.id + '_graphs.zip')">
+            <span class="pi pi-download"></span> Download graphs
+          </button>
+        </div>
         <div class="p-col">
           <span class="p-float-label p-mb-4 p-mt-3">
             <p-dropdown id="metricSelector"
@@ -62,6 +50,15 @@
                         [style]="{'width': '100%'}">
             </p-dropdown>
           </span>
+        </div>
+        <div class="p-col-3 px-0">
+          <button type="button"
+                  style="width: 9rem;"
+                  class="btn btn-sm btn-primary"
+                  title="Download all results in NetCDF format"
+                  (click)="downloadResultFile(validation.id, 'netCDF', validation.output_file_name)">
+            <span><fa-icon [icon]="faIcons.faFileDownload"></fa-icon></span> Download NetCDF
+          </button>
         </div>
       </div>
 
