some styling to sorting form added, so that the style is not overwritten byt style form another page

--- a/UI/src/app/modules/validation-result/components/sorting-form/sorting-form.component.html
+++ b/UI/src/app/modules/validation-result/components/sorting-form/sorting-form.component.html
@@ -1,9 +1,7 @@
-<div class="card">
+<div>
   <div class="p-grid">
-    <div class="p-col-1 p-mt-2">
-      <div class="box">
-        <span class="col-4" id="sorting_form"> Sort By: </span>
-      </div>
+    <div style="max-width: 6rem" class="p-col-2 p-mt-2">
+        <span id="sorting_form"> Sort By: </span>
     </div>
     <div class="p-col">
       <div class="box">
