--- a/UI/src/app/modules/validation-result/components/sorting-form/sorting-form.component.scss
+++ b/UI/src/app/modules/validation-result/components/sorting-form/sorting-form.component.scss
@@ -1,3 +1,5 @@
+@import "~bootstrap/dist/css/bootstrap.css";
 #sorting_form{
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1.15rem;
 }
