--- a/UI/src/app/modules/comparison/components/comparison-page-paginated/comparison-page-paginated.component.html
+++ b/UI/src/app/modules/comparison/components/comparison-page-paginated/comparison-page-paginated.component.html
@@ -1,1 +1,7 @@
-<p>comparison-page-paginated works!</p>
+<!-- custom -->
+<div class="container p-text-center p-mb-5 p-mt-4" style="max-width: 40rem;">
+  <h1 class="jumbotron-heading">Validation comparison</h1>
+  <p class="lead text-muted">
+    Select one or two validations from the scroll-down menu to start your comparison.
+  </p>
+</div>
