--- a/UI/src/app/modules/validation-result/components/summary-statistics/summary-statistics.component.scss
+++ b/UI/src/app/modules/validation-result/components/summary-statistics/summary-statistics.component.scss
@@ -1,8 +1,12 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "../buttons/buttons.component.scss";
-li{
-  word-break: break-word;
+
+.dataframe thead th{
+  text-align: center;
 }
-.expiry-icons{
+.dataframe td:first-child{
+  font-weight: bold;
+}
+.help-icon{
   font-size: 1.1rem;
 }
