--- a/UI/src/app/pages/home/home.component.html
+++ b/UI/src/app/pages/home/home.component.html
@@ -1,8 +1,8 @@
-<div class="p-grid">
+<div *ngIf="images$|async as images" class="p-grid">
   <div class="p-col-12">
-    <p-carousel [value]="landingPageImages"  [circular]="true" [autoplayInterval]="3000">
+    <p-carousel [value]="getListOfPlots(images)"  [circular]="true" [autoplayInterval]="3000">
       <ng-template let-image pTemplate="item">
-        <img style="max-width:100%;max-height:100%;" src="{{image}}" />
+        <img style="max-width:100%;max-height:100%;" [src]="image" />
       </ng-template>
     </p-carousel>
   </div>
