--- a/UI/src/app/pages/about/about.component.html
+++ b/UI/src/app/pages/about/about.component.html
@@ -1,6 +1,6 @@
 <div style="text-align: left; max-width: 40rem; width: 100%; margin: auto;">
     <div align="justify">
-        <a *ngIf="logoFfg$|async as logoFfg" href="https://www.ffg.at/en"><img id="logo_ffg" [src]="plotService.sanitizePlotUrl(logoFfg[0].plot)"></a>
+        <a *ngIf="logoFfg$|async as logoFfg" href="https://www.ffg.at/en"><img id="logo_ffg" [src]="sanitizePlotUrl(logoFfg[0].plot)"></a>
         The <b>QA4SM</b> project provides an operational online validation service for soil moisture products. It started
         in May 2018 and is supported by the <a href="https://www.ffg.at/en">Austrian Research Promotion Agency
         (Österreichische Forschungsförderungsgesellschaft, FFG)</a> in the
@@ -11,7 +11,7 @@
         <tbody>
             <tr>
                 <td class="align-middle">
-                    <a *ngIf="logoTuWien$|async as logoTuWien" href="https://climers.geo.tuwien.ac.at/climers/projects/current-projects/qa4sm/" target="_blank"><img class="partner_logo" [src]="plotService.sanitizePlotUrl(logoTuWien[0].plot)"></a>
+                    <a *ngIf="logoTuWien$|async as logoTuWien" href="https://climers.geo.tuwien.ac.at/climers/projects/current-projects/qa4sm/" target="_blank"><img class="partner_logo" [src]="sanitizePlotUrl(logoTuWien[0].plot)"></a>
                 </td>
                 <td class="align-left">
                     <b>TU Wien (Vienna University of Technology)</b><br>
@@ -24,7 +24,7 @@
             </tr>
             <tr>
                 <td class="align-middle">
-                    <a *ngIf="logoAwst$|async as logoAwst" href="https://www.awst.at/" target="_blank"><img class="partner_logo" [src]="plotService.sanitizePlotUrl(logoAwst[0].plot)"></a>
+                    <a *ngIf="logoAwst$|async as logoAwst" href="https://www.awst.at/" target="_blank"><img class="partner_logo" [src]="sanitizePlotUrl(logoAwst[0].plot)"></a>
                 </td>
                 <td class="align-left">
                     <b>AWST (Applied Science, Software and Technology)</b><br>
@@ -35,7 +35,7 @@
             </tr>
             <tr>
                 <td class="align-middle">
-                    <a *ngIf="logoEodc$|async as logoEodc" href="https://www.eodc.eu/" target="_blank"><img class="partner_logo" [src]="plotService.sanitizePlotUrl(logoEodc[0].plot)"></a>
+                    <a *ngIf="logoEodc$|async as logoEodc" href="https://www.eodc.eu/" target="_blank"><img class="partner_logo" [src]="sanitizePlotUrl(logoEodc[0].plot)"></a>
                 </td>
                 <td class="align-left">
                     <b>EODC (Earth Observation Data Centre)</b><br>
