Progress on comparison views/graphics/angular

--- a/UI/src/app/modules/comparison/components/comparison-page-paginated/comparison-page-paginated.component.html
+++ b/UI/src/app/modules/comparison/components/comparison-page-paginated/comparison-page-paginated.component.html
@@ -5,3 +5,9 @@
     Select one or two validations from the scroll-down menu to start your comparison.
   </p>
 </div>
+
+<div class="p-grid">
+  <qa-validation-selector></qa-validation-selector>
+
+  <qa-plots-pagination></qa-plots-pagination>
+</div>
