--- a/UI/src/app/pages/comparison/comparison.component.html
+++ b/UI/src/app/pages/comparison/comparison.component.html
@@ -1,3 +1,22 @@
-<div class="container">
-  <qa-comparison-page-paginated></qa-comparison-page-paginated>
+<!-- custom -->
+<div class="container p-text-center p-mb-5 p-mt-4" style="max-width: 40rem;">
+  <h1 class="jumbotron-heading">Validation comparison</h1>
+  <p class="lead text-muted">
+    Compare your or published validations between each other.
+  </p>
+</div>
+
+<div class="p-grid no-gutters">
+  <div class="
+    p-col-12
+    p-md-10 p-md-offset-1
+    p-lg-10 p-lg-offset-1
+    p-xl-8 p-xl-offset-2">
+    <div class="p-col-12">
+      <qa-validation-selector></qa-validation-selector>
+    </div>
+    <div class="p-col-12">
+      <qa-plots-pagination></qa-plots-pagination>
+    </div>
+  </div>
 </div>
