some code cleansing done so it works, some names changed so they better describe what the components are for

--- a/UI/src/app/pages/comparison/comparison.component.html
+++ b/UI/src/app/pages/comparison/comparison.component.html
@@ -1,3 +1,13 @@
-<div class="container">
-  <qa-comparison-page-paginated></qa-comparison-page-paginated>
+<!-- custom -->
+<div class="container p-text-center p-mb-5 p-mt-4" style="max-width: 40rem;">
+  <h1 class="jumbotron-heading">Validation comparison</h1>
+  <p class="lead text-muted">
+    Select one or two validations from the scroll-down menu to start your comparison.
+  </p>
+</div>
+
+<div class="p-grid">
+  <qa-validation-selector></qa-validation-selector>
+
+  <qa-plots></qa-plots>
 </div>
