--- a/UI/src/app/modules/comparison/components/validation-selector/validation-selector.component.html
+++ b/UI/src/app/modules/comparison/components/validation-selector/validation-selector.component.html
@@ -13,6 +13,10 @@
     </ng-template>
 
     <p-accordion multiple="true">
+      <p> Select the reference dataset and version from the menu below to access a list of available validations for
+      comparison. You can choose as many as one or two validations from the list, according to the number of non-reference
+      datasets contained (respectively, two or one).
+      </p>
 
       <p-accordionTab > <!-- here filtering modules -->
 
