--- a/UI/src/app/modules/comparison/components/plots/plots.component.html
+++ b/UI/src/app/modules/comparison/components/plots/plots.component.html
@@ -1,5 +1,5 @@
 <div class="p-col-12">
-  <p-panel [toggleable]="true">
+  <p-panel [toggleable]="true" [collapsed]="true">
     <ng-template pTemplate="header">
       <div class="text-center my-1" style="width: 92%">
         <h4 class="my-0 font-weight-normal">Comparison summary</h4>
