Dictionary method in url (temporary) and page development

--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -47,7 +47,7 @@
             </p-accordionTab>
 
           </p-accordion>
-          <button pButton type="button" label="Add dataset" icon="pi pi-plus-circle" (click)="addDatasetToValidate()"
+          <button pButton type="button" label="Add validation" icon="pi pi-plus-circle" (click)="addDatasetToValidate()"
                   class="p-button-success mt-2 mb-2" style="padding: 0.2rem;"
                   [disabled]="addDatasetButtonDisabled()"></button>
 
