--- a/UI/src/app/modules/comparison/components/validation-selector/validation-selector.component.html
+++ b/UI/src/app/modules/comparison/components/validation-selector/validation-selector.component.html
@@ -1,38 +1,77 @@
+<div class="p-grid">
+  <div class="p-md-6 p-col-12">
+    <p-panel header="Reference dataset selection" [toggleable]="false">
+      <ng-template pTemplate="icons">
+        <label class="mb-0" pTooltip="Select from the menu below to access a list of available
+        validations for comparison, based on common dataset and version."
+               tooltipPosition="bottom">
+          <span class="p-panel-header-icon pi pi-question-circle help-icon"></span>
+        </label>
+      </ng-template>
+      <p-accordion multiple="false">
+        <!-- here dataset/version selection -->
+        <p-accordionTab *ngFor="let item of selectedDatasetModel; let datasetIdx = index"
+          [header]=" 'Reference selection: ' + (selectedDatasetModel[0].datasetModel.selectedDataset?.pretty_name)+' / '+(selectedDatasetModel[datasetIdx].datasetModel.selectedVersion?.pretty_name)">
+
+          <qa-dataset *ngIf="selectedDatasetModel[0].datasetModel.selectedDataset"
+                      [removable]="false"
+                      [selectionModel]="selectedDatasetModel[0].datasetModel"></qa-dataset>
+
+        </p-accordionTab>
+      </p-accordion>
+    </p-panel>
+  </div>
+  <div class="p-md-6 p-col-12">
+    <p-panel header="Validations selection" [toggleable]="false">
+      <ng-template pTemplate="icons">
+        <label class="mb-0" pTooltip="You can choose as many as one or two validations from the list, according to the number of non-reference
+        datasets contained (respectively, two or one). Tip: rename your validations to find them more easily."
+               tooltipPosition="bottom">
+          <span class="p-panel-header-icon pi pi-question-circle help-icon"></span>
+        </label>
+      </ng-template>
+      <p-accordion multiple="true">
+        <p-accordionTab > <!-- should be *ngFor loop with all the selected validations -->
+          <!-- here validation selection -->
+          <div class="p-grid">
+            <div class="p-col-12">
+
+              <div class="p-float-label p-m-2">
+
+                <p-dropdown id="validationSelector" (onChange)="selectedValidationChanged()"
+                            [options]="validations4Comparison"
+                            [(ngModel)]="selectedValidation"
+                            optionLabel="description" [style]="{'width':'100%'}"></p-dropdown>
+                <label for="validationSelector">Select a validation</label>
+              </div>
+            </div>
+            <!--    copy from anomalies selection
+
+            <div class="p-col-12 p-sm-6">
+              <qa-anom-climatology *ngIf="selectedMethod.method==anomaliesClimatology"
+                                   [anomaliesModel]="methodForValidation"></qa-anom-climatology>
+            </div> -->
+          </div>
+
+          <button pButton type="button" (click)="removeValidation()"
+                  label="Remove validation"
+                  icon="pi pi-trash"
+                  class="p-button-danger" style="padding: 0.2rem;"></button>
+        </p-accordionTab>
+        <button pButton type="button" label="Add validation" icon="pi pi-plus-circle" (click)="addValidation2Comparison()"
+                class="p-button-success mt-2 mb-2" style="padding: 0.2rem;"></button>
+
+      </p-accordion>
+
+    </p-panel>
+  </div>
+<!--  Add section with possibility to validate the "Union" of spatial extents. Make it mandatory if the two validations
+have non-overlapping extents-->
+</div>
 <div class="p-col-12">
-  <p-panel header="Validations selection" [toggleable]="false">
-    <ng-template pTemplate="icons">
-      <label class="mb-0" pTooltip="Select the validations to compare."
-             tooltipPosition="bottom">
-        <span class="p-panel-header-icon pi pi-question-circle help-icon"></span>
-      </label>
-    </ng-template>
-    <p> Select the reference dataset and version from the menu below to access a list of available validations for
-      comparison. You can choose as many as one or two validations from the list, according to the number of non-reference
-      datasets contained (respectively, two or one).
-    </p>
-    <p-accordion multiple="false">
-      <!-- here dataset/version selection -->
-      <p-accordionTab *ngFor="let item of selectedDatasetModel; let datasetIdx = index"
-        [header]="(selectedDatasetModel[0].datasetModel.selectedDataset?.pretty_name)+' / '+(selectedDatasetModel[datasetIdx].datasetModel.selectedVersion?.pretty_name)">
-
-        <qa-dataset *ngIf="selectedDatasetModel[0].datasetModel.selectedDataset"
-                    [removable]="false"
-                    [selectionModel]="selectedDatasetModel[0].datasetModel"></qa-dataset>
-
-      </p-accordionTab>
-    </p-accordion>
-
-<!--    <p-accordion multiple="true">-->
-<!--      <p-accordionTab > &lt;!&ndash; should be *ngFor loop with all the selected validations &ndash;&gt;-->
-<!--        &lt;!&ndash; here validation selection &ndash;&gt;-->
-
-<!--        <button pButton type="button" (click)="removeValidation()"-->
-<!--                label="Remove validation"-->
-<!--                icon="pi pi-trash"-->
-<!--                class="p-button-danger" style="padding: 0.2rem;"></button>-->
-<!--      </p-accordionTab>-->
-
-<!--    </p-accordion>-->
-
-  </p-panel>
+  <div>
+    <div class="p-d-flex p-jc-center">
+      <p-button label="Compare" (onClick)="startComparison()"></p-button>
+    </div>
+  </div>
 </div>
