--- a/UI/src/app/pages/comparison/comparison.component.html
+++ b/UI/src/app/pages/comparison/comparison.component.html
@@ -2,7 +2,7 @@
 <div class="container p-text-center p-mb-5 p-mt-4" style="max-width: 40rem;">
   <h1 class="jumbotron-heading">Validation comparison</h1>
   <p class="lead text-muted">
-    Compare your or published validations between each other.
+    Compare results from your validations or published ones.
   </p>
 </div>
 
@@ -12,11 +12,10 @@
     p-md-10 p-md-offset-1
     p-lg-10 p-lg-offset-1
     p-xl-8 p-xl-offset-2">
-    <div class="p-col-12">
-      <qa-validation-selector></qa-validation-selector>
-    </div>
-    <div class="p-col-12">
-      <qa-plots></qa-plots>
-    </div>
+
+  <!--   validations selection   -->
+    <qa-validation-selector></qa-validation-selector>
+  <!--  table and plots section  -->
+    <qa-plots></qa-plots>
   </div>
 </div>
